--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portfolio",
+  "homepage": "https://mntrinfs.github.io/KietPham-website/"
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,6 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+	"predeploy": "npm run build"
+	"deploy": "gh-pages -d -dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
