--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "my-portfolio",
   "homepage": "https://mntrinfs.github.io/KietPham-website/"
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
-	"predeploy": "npm run build"
-	"deploy": "gh-pages -d -dist"
+    "preview": "vite preview",
+	  "predeploy": "npm run build",
+	  "deploy": "gh-pages -d -dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
