--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://mntrinfs.github.io/KietPham-website/"
+  "homepage": "https://mntrinfs.github.io/KietPham-website/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
